# controllers/user.go
@@ -15,8 +15,9 @@ import (
 // @Accept json
 // @Produce json
 // @Param user body models.User true "User data"
-// @Success 201 {object} utils.SignUpSuccessResponse  "User created successfully"
+// @Success 201 {object} utils.UserSuccessResponse  "User created successfully"
 // @Failure 400 {object} utils.ErrorResponse "Bad Request"
+// @Failure 409 {object} utils.ErrorResponse "Conflict - user already exists"
 // @Failure 500 {object} utils.ErrorResponse "Internal Server Error"
 // @Router /users/signup [post]
 func SignUp(context *gin.Context) {
@@ -28,7 +29,12 @@ func SignUp(context *gin.Context) {
 		context.JSON(http.StatusBadRequest, gin.H{"error": "could not parse the request"})
 		return
 	}
+	_, err = models.GetUser(user.Email)
 
+	if err == nil {
+		context.JSON(http.StatusConflict, gin.H{"error": "Conflict - user already exists"})
+		return
+	}
 	err = user.Save()
 	if err != nil {
 		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
@@ -72,4 +78,26 @@ func Login(context *gin.Context) {
 	}
 	user.Password = ""
 	context.JSON(http.StatusOK, gin.H{"message": "User logged in successfully with JWT token", "jwt": jwt, "user": user})
+}
+
+// GetUser godoc
+// @Summary Retrieve user by email
+// @Description Get a user by their email address
+// @Tags Users
+// @Accept json
+// @Produce json
+// @Param email path string true "Email"
+// @Param Authorization header string true "Bearer token"
+// @Success 200 {object} utils.UserSuccessResponse "User retrieved successfully"
+// @Failure 404 {object} utils.ErrorResponse "user not found"
+// @Router /users/{email} [get]
+func GetUser(context *gin.Context) {
+	email := context.Param("email")
+	user, err := models.GetUser(email)
+	if err != nil {
+		context.JSON(http.StatusNotFound, gin.H{"error": "user not found"})
+		return
+	}
+	user.Password = ""
+	context.JSON(http.StatusOK, gin.H{"message": "User retrieved successfully", "user": user})
 }
